Fix overflow to render pages better on iOS

--- a/content/base.css
+++ b/content/base.css
@@ -12,6 +12,7 @@ img {
 }
 pre {
     padding: 5px;
+    overflow-x: auto;
 }
 a {
     text-decoration: none;
